# distr-apps-labs

lab01/: .gitignore  lab01.sln
lab01/lab01/: Program.cs
lab01/lab01/Examples/: AutoResetEventExample.cs  BasicThread.cs  CorrectLambdaExample.cs  FactorialJoin.cs  ForegroundBackgroundThreadsExample.cs  IExample.cs  JoinThreads.cs  JoinThreadsExample.cs  LambdaThread.cs  MainThreadChildThreadExample.cs  NamedDataSlotExample.cs  ParameterizedThread.cs  ParametrizedThreadStartExample.cs  PassParametersGlobalVarsExample.cs  PassParametersStartExample.cs  PriorityExample.cs  SleepExample.cs  StaticLambdaClassExample.cs  ThreadLocalClassExample.cs  ThreadLocalExample.cs  ThreadLocalStaticExample.cs  ThreadNumbersExample.cs  ThreadPriorityExample.cs  ThreadPropertiesExample.cs  WrongLambdaExample.cs
lab02/: .gitignore  CMakeLists.txt  floyd_longest.cpp  floyd_shortest.cpp
lab03/: .gitignore  CMakeLists.txt  README.md  main.cpp
lab04/: .gitignore  CMakeLists.txt  README.md  hosts.txt  task1.cpp  task2.cpp
lab05/: .gitignore  CMakeLists.txt  README.md  main.cpp  mpi_floyd
